<resources>
    <string name="app_name">UniOrganizer</string>
    <string name="string_editText_entryname">Name der Veranstaltung ...</string>
    <string name="string_editText_description">Beschreibung ...</string>
    <string name="string_button_addEntry">Hinzufügen</string>
    <string name="string_button_stundenplan">Stundenplan hinzufügen/verändern</string>
    <string name="string_button_freunde">Freundesliste</string>
    <string name="string_edit_timetable">Stundenplan hinzufügen/verändern</string>
    <string name="string_day_name">DayName</string>
    <string name="string_button_monday">Monday</string>
    <string name="string_button_tuesday">Tuesday</string>
    <string name="string_button_wednesday">Wednesday</string>
    <string name="string_button_thursday">Thursday</string>
    <string name="string_button_friday">Friday</string>
    <string name="string_hint_lecture_name">Lecture Name</string>
    <string name="string_hint_room_number">Room Number</string>
    <string name="string_hint_beginning">z.B 08:15</string>
    <string name="string_hint_end">z.B 10:45</string>
    <string name="string_hint_add_lecture">Add your lecture here</string>
    <string name="string_hint_name">Please enter name of your lecture</string>
    <string name="string_hint_room">Please enter the room number of your lecture</string>
    <string name="string_hint_beginning_lecture">Beginning of your lecture</string>
    <string name="string_hint_end_lecture">End of your lecture</string>
    <string name="string_button_add_lecture">Add Lecture</string>
    <string name="string_button_back">back</string>
    <string name="string_button_add_day">Add Day</string>
    <string name="string_button_register">Register</string>
    <string name="string_hint_set_username">Username</string>
    <string name="string_hint_set_password">Password</string>
    <string name="string_hint_set_email">Email</string>
    <string name="string_textView_register">Set Username, Password and Email</string>
    <string name="string_button_login">Login</string>
    <string name="string_textView_login">Enter Username and Password</string>
    <string name="string_textView_create_new_account">Don\'t have an Account already ?</string>
    <string name="string_textView_register_link">Register</string>
    <string name="string_editText_searchFriend">Search by Username ...</string>
    <string name="string_button_searchFriend">Search</string>
    <string name="string_menu_item_present_at_uni">Present at Uni</string>
    <string name="string_menu_item_logout">Logout</string>
    <string name="string_menu_item_delete_account">Delete Account</string>
    <string name="string_button_switch_fragment_forward">Next</string>
    <string name="string_button_switch_fragment_backward">Back</string>
    <string name="string_shortcut_friendlist">Friendlist</string>
</resources>
